# experimance

./: .gitignore  INSTALL.md  README.md
experimance/: .gitignore  AUDIO_IMPLEMENTATION_SUMMARY.md  DISTRIBUTED_TIMELINE_GUIDE.md  MANIFEST.in  NEW_CORE_GUIDE.md  README.md  TODO.md  __init__.py  bootstrap.py  fix_imports.py  opencode.json  pyproject.toml  pytest.ini  repomix.config.json  requirements.txt  setup.py  setup.sh  setup_new.sh  technical_design.md  test_image_pipeline.py
experimance/.github/: copilot-instructions.md
experimance/.github/instructions/: AGENTS.md  experimance.instructions.md
experimance/.github/prompts/: code-review.md  create-service.prompt.md  display_service.md  zmq-communication.prompt.md
experimance/.opencode/commands/: improve-service-docs.md
experimance/data/: anthropocene.json  experimance_config.json  locations.json  unique_anthropocene_elements.txt
experimance/docs/: architecture.md  configuration.md  development_workflow.md  faq.md  getting_started.md  health_system.md  image_zmq_utilities.md  index.md  logging_system.md  mock_detector_testing.md  multi_channel_audio.md  multi_channel_quick_reference.md  project_management.md  shader_effects_system.md  smart_plug_matter_control.md  technical_design.md  troubleshooting.md
experimance/docs/installations/: FMC_2025-09.md  InterAccess_2025-09.md  experimance_tech_rider.md  feed_the_fires _tech_rider.md
experimance/infra/: README.md  TODO.md  __init__.py
experimance/infra/ansible/: .gitignore  __init__.py
experimance/infra/configs/: logrotate-experimance
experimance/infra/docker/: .gitignore  __init__.py
experimance/infra/docs/: deployment.md  emergency-reference.md  emergency-ssh-recovery.md  installation_teardown.md  new_machine_setup.md
experimance/infra/grafana/: .gitignore  __init__.py
experimance/infra/launchd/: README.md  com.experimance.agent.fire.plist  com.experimance.agent.template.plist  com.experimance.fire.agent.plist  com.experimance.fire.health.plist  com.experimance.health.fire.plist  com.experimance.health.template.plist  launch_fire_agent.sh  launch_fire_health.sh
experimance/infra/monitoring/: config.yaml  crontab  dashboard.py
experimance/infra/scripts/: README.md  README_LAUNCHD_SCHEDULER.md  README_TOUCHDESIGNER.md  backup_images.sh  deploy.sh  deployment_utils.py  get_deployment_services.py  get_project_services.py  get_service_module.py  healthcheck.py  ia_gallery.py  kiosk_mode.sh  launchd_scheduler.sh  matter_scheduler.py  matter_scheduler.sh  preventive_maintenance.sh  remote_access_monitor.sh  reset.sh  reset_on_input.py  secure_ssh.sh  setup_display_env.sh  shutdown.sh  startup.sh  status.sh  switch-project.sh  system_diagnostic.sh  touchdesigner_agent.sh  update.sh  wait_for_desktop_session.sh  wait_for_display.sh
experimance/infra/systemd/: agent@.service  audio@.service  core@.service  display@.service  experimance-agent@.service  experimance-audio@.service  experimance-core@.service  experimance-display-user@.service  experimance-display@.service  experimance-display@.user.service  experimance-health@.service  experimance@.target  health@.service  image-server@.service  image_server@.service  matter-scheduler@.service  reset-on-input.service
experimance/libs/: __init__.py
experimance/libs/common/: .gitignore  README.md  README_SERVICE.md  README_SERVICE_TESTING.md  README_ZMQ.md  __init__.py  pyproject.toml
experimance/patches/: .gitignore  README.md  verify_patches.sh
experimance/projects/experimance/: README.md  agent.toml  audio.toml  constants.py  core.toml  deployment.toml  display.toml  health.toml  image_server.toml  install_checklist.md  schemas.py  schemas.pyi
experimance/projects/fire/: NOTES.md  README.md  TODO.md  agent.toml  core.toml  deployment.toml  display.toml  fire_spirit_prompt.md  health.toml  image_server.toml  matter_schedule.toml  schemas.py  schemas.pyi  system_prompt_t2i_prompt.md
experimance/projects/sohkepayin/: README.md  core.toml  display.toml  image_server.toml  schemas.py  system_prompt_t2i_prompt.md
experimance/scripts/: .git_identity_remote  README.md  README_AUDIO_CACHE.md  README_SCRIPTS.md  audio_cache_manager.py  audio_recovery.py  check_docs_links.py  combine_triptychs.py  create_new_project.py  dev  generate_environmental_sound_json.py  git_daily_card.py  image_watch.sh  images_to_video.py  list_anthropocene_elements.py  list_audio_devices.py  list_cameras.py  list_webcams.py  manage_matter_scheduler.sh  matter_scheduler.py  mock_control.py  normalize_audio.sh  pipewire_multi_sink.py  project  repomix_profiles.sh  set_project.py  test_multi_channel_audio.py  test_osc.py  test_reolink_camera.py  triptych_to_video.py  tune_detector.py  update_pyi_stubs.py  validate_schemas.py  vastai_cli.py  view_images.py  zip_media.sh
experimance/scripts/docs/: README.md  audio_cache_manager.md  audio_recovery.md  combine_triptychs.md  create_new_project.md  dev.md  images_to_video.md  list_cameras.md  mock_control.md  pipewire_multi_sink.md  test_multi_channel_audio.md  test_reolink_camera.md  tune_detector.md  update_pyi_stubs.md
experimance/services/: __init__.py
experimance/services/agent/: .gitignore  AUDIO_CRASH_PREVENTION.md  README.md  README_VISION.md  TODO.md  config.toml  pyproject.toml  requirements.txt
experimance/services/audio/: .gitignore  CONFIGURATION_DESIGN.md  README.md  README_SURROUND_SOUND.md  TODO.md  __init__.py  audio_credits.md  audio_technical_design.md  config.toml  pyproject.toml  requirements.txt
experimance/services/core/: .env.example  .gitignore  CODE_REVIEW.md  DESIGN.md  NEW_CORE_GUIDE.md  README.md  README_DEPTH.md  TODO.md  config.toml  debug_camera.py  depth_camera_config_high_accuracy.json  pyproject.toml  pyproject_sohkepayin.toml  pytest.ini
experimance/utils/: __init__.py
transition_rs/: .gitignore  Cargo.toml  README.md  transitions.rs
transition_rs/benches/: benchmark_flood_fill.rs  benchmark_flood_fill_compare.rs  benchmark_flood_fill_opt2.rs
transition_rs/src/: args.rs  image_processing.rs  lib.rs  macros.rs  main.rs  transitions.rs
(+527 files in other folders)
