[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "experimance-project"
version = "0.1.0"
description = "Interactive sand-table art installation with AI-generated satellite imagery"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [
    {name = "Ryan Kelln", email = "ryan.kelln@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

# This is just a meta-package that depends on all the actual services
dependencies = [
    "experimance-common>=0.1.0",
    "experimance-core>=0.1.0",
    "experimance-display>=0.1.0",
    "experimance-audio>=0.1.0",
    "experimance-agent>=0.1.0",
    "experimance-image-server>=0.1.0",
    "experimance-transition>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pytest-cov>=4.1",
    "mypy>=1.7",
    "ruff>=0.1.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "B"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
