[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "experimance-project"
version = "0.1.0"
description = "Interactive sand-table art installation with AI-generated satellite imagery"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [
    {name = "Ryan Kelln", email = "ryan.kelln@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

# This is just a meta-package that depends on all the actual services
dependencies = [
    "experimance-common>=0.1.0",
    "experimance-core>=0.1.0",
    "experimance-display>=0.1.0",
    "experimance-audio>=0.1.0",
    "experimance-agent>=0.1.0",
    "image-server>=0.1.0",
    "experimance-transition>=0.1.0",
    "aiohttp>=3.11.18",
    "fal-client>=0.6.0",
    "pyglet>=2.1.6",
    "pyrealsense2>=2.55.1.6486",
    "pipecat-ai[openai]>=0.0.73",
    "pipecat-ai-flows>=0.0.18",
]

[tool.uv.workspace]
members = ["services/*", "libs/*"]

[tool.uv.sources]
experimance-common = { workspace = true }
experimance-core = { workspace = true }
experimance-display = { workspace = true }
experimance-audio = { workspace = true }
experimance-agent = { workspace = true }
image-server = { workspace = true }
experimance-transition = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-cov",
    "mypy",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["utils/tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
]
