[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "experimance-agent"
version = "0.1.0"
description = "Agent service for the Experimance interactive art installation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Ryan Kelln", email = "ryan.kelln@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "experimance-common>=0.1.0",
    "pipecat-ai",
    "pipecat-ai-flows>=0.0.18",
    "pyaudio",
    "python-dotenv",
    # Vision processing dependencies
    "opencv-python>=4.8.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "tomli-w>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "mypy",
    "ruff",
]
vision-gpu = [
    "torch[cuda]>=2.0.0",
]
vision-models = [
    "accelerate>=0.24.0",
    "sentencepiece>=0.1.99",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["experimance_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
