[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "image-server"
version = "0.1.0"
description = "Image server service for the Experimance interactive art installation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Ryan Kelln", email = "ryan.kelln@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "experimance-common>=0.1.0",
    "numpy",
    "pyzmq",
    "pillow",
    "opencv-python",
    "aiohttp",
    "requests",
    "fal-client",
    "openai",
    "python-dotenv",
    "tenacity"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "mypy",
    "ruff",
]
local_gen = [
    "torch>=2.1.0",
    "diffusers>=0.27.0",
    "transformers>=4.39.0",
    "accelerate>=0.27.0",
    "safetensors>=0.4.2",
    "tqdm>=4.64.0",
    "xformers>=0.0.23; platform_system=='Linux' and platform_machine=='x86_64'",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["image_server"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
