[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "experimance-transition"
version = "0.1.0"
description = "Transition service for the Experimance interactive art installation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Ryan Kelln", email = "ryan.kelln@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "experimance-common>=0.1.0",
    "numpy",
    "pillow",
    "opencv-python",
    "scipy",
    "scikit-image",
    "scikit-learn"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "mypy>=1.7",
    "ruff>=0.1.6",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["experimance_transition"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
